# pico

./: CMakeLists.txt  LICENSE  README.md
led_strip/: CMakeLists.txt  common.h  main.c  net.c
